# RoboticLawnz

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  Robotic_Lawnz_Build_Spec.md  Zippy_Lawnz_Build_Spec.md  package.json  pnpm-lock.yaml  railway.json  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  db.py  logging.py  rate_limit.py  security.py
apps/api/app/data/: grass_species.py
apps/api/app/ml/: __init__.py  grass_classifier.py  replicate.py  segmentation.py
apps/api/app/models/: __init__.py  assessment.py  enums.py  lead.py  mixins.py  mower.py  recommendation.py  user.py
apps/api/app/routers/: admin.py  assessments.py  grass.py  health.py  leads.py  me.py  mowers.py  sales.py
apps/api/app/schemas/: __init__.py  assessment.py  common.py  lead.py  mower.py  recommendation.py  user.py
apps/api/app/services/: __init__.py  assessment_service.py  email.py  geo.py  lead_service.py  mower_service.py  recommendations.py
apps/api/scripts/: deploy_preflight.py  seed_mowers.py  start.sh
apps/api/scripts/data/: mowers.csv
apps/api/tests/: README.md  conftest.py  test_email.py  test_geo.py  test_health.py  test_prod_config.py  test_rate_limit.py  test_recommendations.py  test_schemas.py  test_segmentation.py  test_settings.py
apps/web/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  instrumentation.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  railway.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
apps/web/components/: LawnMap.tsx  PositionMap.tsx  google-places-autocomplete.tsx
apps/web/lib/: admin-client.ts  analytics.ts  api.ts  assessment-client.ts  consent.ts  env.ts  utils.ts  (+4 more)
docs/: README.md
infra/: docker-compose.yml
infra/initdb/: 01-extensions.sql
infra/railway/: README.md
scripts/: docker-start.sh  setup-git.ps1
(+57 files in other folders)
