[project]
name = "roboticlawnz-api"
version = "0.1.0"
description = "Robotic Lawnz backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.3",
  "geoalchemy2>=0.15.2",
  "psycopg[binary]>=3.2.3",
  "asyncpg>=0.29.0",
  "redis>=5.1.1",
  "httpx>=0.27.2",
  "python-jose[cryptography]>=3.3.0",
  "email-validator>=2.2.0",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.12",
  "shapely>=2.0.6",
  "pillow>=10.4.0",          # SAM 2 mask decoder
  "slowapi>=0.1.9",          # rate limiting middleware
  "structlog>=24.4.0",
  "sentry-sdk[fastapi]>=2.16.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.2",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "types-redis>=4.6.0",
  "asgi-lifespan>=2.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
]
ignore = ["E501", "B008", "I001", "RUF022"]  # line length handled by formatter; B008: Depends is the FastAPI pattern; I001/RUF022: auto-sort frustrating across platforms

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false  # SQLAlchemy decorators are partially typed
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["geoalchemy2.*", "shapely.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]
